0025122: Expose internal static function ComputeDeviation from ShapeAnalysis_Edge.cxx